--- a/resources.html
+++ b/resources.html
@@ -158,9 +158,9 @@
           </ul>
         </div>
         <div id="companyInfo">
-          <h1>Contacts</h1>
+          <h1>Contact</h1>
           <h2>Explore California</h2>
-          <p>56056 Nota Street<br />
+          <p>5605 Nota Street<br />
             Ventura, CA 93003</p>
           <p>866.555.4310<br />866.555.6337 <em>(24 hour support)</em></p>
         </div>
